Fixed schedule text overlap

--- a/wp-content/themes/my-church/custom.css
+++ b/wp-content/themes/my-church/custom.css
@@ -82,7 +82,7 @@
 }
 
 .schedule-box h5 {
-  line-height: .5rem;
+  line-height: 1rem;
 }
 
 /* Medium screens and up */
